--- a/lscommands/index.html
+++ b/lscommands/index.html
@@ -61,6 +61,4 @@
         <div id="consola">
             <object class="terminal_bash" data="http://cb.vu" width="300" height="300"></object>
         </div>
-        
-    </body>
-</html>
+    </body></html>
