update the new icon & change of fonts

--- a/lscommands/index.html
+++ b/lscommands/index.html
@@ -3,10 +3,10 @@
     <head>
         <title>LS COMMANDS</title>
         <meta charset="UTF-8">
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="assets/style/main.css">
-        <link rel="shortcut icon" href="img/icon.png" type="image/x-icon" borde="0">
+        <link rel="shortcut icon" href="img/icon.svg" type="image/x-icon" borde="0">
     </head>
     
     <script src="assets/js/terminal_bash.js"></script>
@@ -35,7 +35,7 @@
                 <option selected value="bash">Bash</option>
                 <option value="cmd">Windows CMD</option>
 				<option value="html">HTML</option>
-				<option value="all">I don't know, just search it</option>
+				<option value="all">I don't know, search in all libraries</option>
             </select>
         </div>
         
