update / addition of a new file into the database

--- a/lscommands/index.html
+++ b/lscommands/index.html
@@ -34,8 +34,9 @@
             <select name="language" id="language" class="select">
                 <option selected value="bash">Bash</option>
                 <option value="cmd">Windows CMD</option>
-				<option value="html">HTML</option>
-				<option value="all">I don't know, search in all libraries</option>
+		<option value="html">HTML</option>
+		<option value="css">CSS</option>
+		<option value="all">I don't know, search in all libraries</option>
             </select>
         </div>
         
